# banded_matrices

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  README.md  TODO.md  build.py  dummy.c  pylintrc  pyproject.toml  setup.py
.github/workflows/: quality-check.yaml  upload-pypi.yaml
banded_matrices/: CMakeLists.txt  banded.py  library.py  platform.py  types.py
banded_matrices/cc/: CMakeLists.txt  googletest.CMakeLists.txt
banded_matrices/cc/include/banded_matrices/: banded_matrix.hpp  cholesky.hpp  common.hpp  product.hpp  solve.hpp  unary_broadcastable_op_kernel.hpp
banded_matrices/cc/src/banded_matrices/: block_band.cc  cholesky.cc  inverse.cc  outer_vec_vec.cc  pack_matrix.cc  product_band_band.cc  product_band_mat.cc  reverse_inverse.cc  solve_triang_band.cc  solve_triang_mat.cc  square_band.cc  symmetrise.cc  transpose_band.cc
banded_matrices/cc/test/: common.hpp  main.cc  test_banded_matrix.cc  test_product_band_band.cc  test_solve.cc
tests/: .gitignore  test_example.py
tests/integration/: __init__.py
tests/integration/banded_matrices/: test_band_kl.py  test_chol_cholT_prod.py  test_cholesky_and_back.py
tests/integration/banded_matrices/perf/: Readme.txt  test_broadcasting.py  test_inverse.py  test_product.py  test_reverse_inverse_from_cholesky.py  test_run_full_broadcasting_profile.py  test_unary_broadcast.py
tests/unit/banded_matrices/: test_block_band.py  test_broadcast.py  test_chol_solve_band_mat.py  test_cholesky.py  test_indexed_slices.py  test_inverse_from_cholesky.py  test_outer_vec_vec.py  test_pack_matrix.py  test_product_band_band.py  test_product_band_mat.py  test_solve_triang_band.py  test_solve_triang_mat.py  test_square_band.py  test_symmetrise.py  test_transpose.py
tests/utils/: banded_matrices_utils.py
